	(loadProjectProperties): ...to here. This is a notification action.
	* Framework/PCProjectInspector.m:
	(searchOrderPopupDidChange:): Clean selection in list. Clean text
	field.
	(searchOrderClick:): Show value of selected item in text field.
	(addSearchOrder:): Add check for entered value. More checking will be
	added
	in the future.
	* Documentation/TODO: Rearrange some items. Update state.

2009-03-20 Sergii Stoian <stoyan255@gmail.com>

	* Framework/PCProject.m:
	(buildTargets): Return default build targets only if project file
	doesn't contain list of them.
	* Framework/PCProjectBuilder.m:
	(prebuildCheck): Create build directory only if preference was set.
	(build:): Set initial "=== started ===" string.
	* Framework/PCProjectInspector.m:
	(createBuildAttributes): Set target and action for table view.
	(searchOrderPopupDidChange:): Add support for "Build Targets".
	(setSearchOrderButtonsState): Enable "Remove" button only if item 
	in list was selected.
	(syncSearchOrder): Add support for "Build Targets".
	* Documentation/TODO: Add some tasks and update status of others.
	* Headers/ProjectCenter/PCDefines.h: Add key for build targets
	support.

2009-03-19 Sergii Stoian <stoyan255@gmail.com>

	* Framework/PCProjectManager.m: 
	(dealloc): Replace if() check with TEST_RELEASE.
	(openFileAtPath:): Use class variable instead of method's local.
	(saveFile): Call saveFile to project editor if project is active and
	project window has key state. Call non-project editor manager
	otherwise.
	* PCPrefController.m:
	(stringForKey:defaultValue:): Set value to non-existent key only if
	defaultValue is not 'nil' ('nil' when called via stringForKey:
	method).
	(boolForKey:defaultValue:): Set value to non-existent key only if
	defaultValue has positive value (has '-1' when called via boolForKey:
	method).

2009-03-17 02:14 Sergii Stoian <stoyan255@gmail.com>

	* Framework/PCProjectManager.m:
	(openProjectAt:): Setactive project to loaded after all initalization
	completed.